ingress-airflow.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-web-ingress
  namespace: airflow
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: '/health'
    alb.ingress.kubernetes.io/group.name: airflow
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: airflow-web
                port:
                  number: 8080
